# metamodule-phase-oscillator

./: .gitmodules  CMakeLists.txt  plugin-mm.json
metamodule-plugins/: InfrasonicAudio.mmplugin  PhaseOscillator.mmplugin
